--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Ermis Chat</title>
+  <title>Streaming Demo</title>
 </head>
 
 <body>
